first commit after dbms change